<resources>
    <string name="app_name">MovieCatalogProject</string>
    <string name="empty_string" translatable="false"> </string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="registration_text">Registration</string>
    <string name="authorization_text">Authorization</string>
    <string name="already_have_account_text">I already have account</string>
    <string name="logo_content_description">this is a logo</string>
    <string name="entrance_layout_description" translatable="false">logo decreasing layout</string>
    <string name="date_picker_content_description">date picker</string>
    <string name="name_text">Name</string>
    <string name="email_text" translatable="false">E-mail</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="repeat_password_text">Repeat password</string>
    <string name="birth_date_text">Birthday date</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="gender_text">Gender</string>
    <string name="emptiness_error">Field mustn\'t be empty</string>
    <string name="email_error">Email should contain @ symbol</string>
    <string name="passwords_equality_error">Passwords must be equal</string>
    <string name="password_size_error">Password must contain at least 6 characters</string>
    <string name="date_error">Date must be in the format of DD.MM.YYYY</string>
    <string name="picker_error">Male must be chosen</string>
    <string name="all_is_ok">OK</string>
    <string name="error_registration_400">Username exists!</string>
    <string name="error_authorization_400">Username or password is invalid!</string>
    <string name="error_profile_400">E-mail already exists</string>
    <string name="error_401" translatable="false">Access token expired!</string>
    <string name="main_tab_name">Main</string>
    <string name="profile_tab_name">Profile</string>
    <string name="banner_content_description">this is a banner</string>
    <string name="watch_button_text">Watch</string>
    <string name="favourites_text">Favourites</string>
    <string name="favourites_content_description">this is a film from favourites</string>
    <string name="close_button_content_description">remove from favourites</string>
    <string name="gallery_text">Gallery</string>
    <string name="gallery_content_description">this is a film from gallery</string>
    <string name="gallery_start_text" translatable="false">some text</string>
    <string name="gallery_rating_default_text" translatable="false">0.0</string>
    <string name="profile_content_description">this is your avatar</string>
    <string name="save_button_text">Save</string>
    <string name="logout_button_text">Logout</string>
    <string name="avatar_link_text">Link</string>
    <string name="saved_data_text">Saved!</string>
    <string name="default_text"> </string>
    <string name="year">Year</string>
    <string name="country">Country</string>
    <string name="time">Time</string>
    <string name="slogan">Slogan</string>
    <string name="director">Director</string>
    <string name="budget">Budget</string>
    <string name="fees">Fees</string>
    <string name="age">Age</string>
    <string name="about_movie">About movie</string>
    <string name="genres">Genres</string>
    <string name="reviews">Reviews</string>
    <string name="button_content_description">this is a button</string>
    <string name="my_review">my review</string>
    <string name="like_content_description">like button</string>
    <string name="anonymous_username">Anonymous user</string>
    <string name="add_review">Add review</string>
    <string name="cancel_button">Cancel</string>
    <string name="anonymous_review">Anonymous review</string>
    <string name="review_error">you can\'t do it</string>
    <string name="refresh_button_text">refresh</string>
    <string name="connection_error_swipe_text">No internet connection.\nSwipe down to repeat the request</string>
    <string name="connection_error_text">Please, check your internet connection</string>
    <string name="connection_error_repeat_text">No internet connection.\nTry to repeat request later</string>
    <string name="min_text">min.</string>
    <string name="review">Review</string>


</resources>