<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.entrance.authorization.AuthorizationFragment">

    <com.example.moviecatalogproject.presentation.common.MyEditText
        android:id="@+id/loginEditText"
        style="@style/edit_text_style"
        android:layout_marginTop="@dimen/sign_up_logo_top_margin"
        android:hint="@string/login_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <com.example.moviecatalogproject.presentation.common.MyEditText
        android:id="@+id/passwordEditText"
        style="@style/edit_text_style"
        android:layout_marginTop="@dimen/edit_texts_margin"
        android:fontFamily="@font/ibm_plex_sans"
        android:hint="@string/password_text"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/authorizationButton"
        style="@style/sign_button_style"
        android:background="@drawable/sign_button_selector"
        android:text="@string/sign_in_text"
        app:layout_constraintBottom_toTopOf="@id/authorizationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registrationButton"
        style="@style/text_button_style"
        android:padding="@dimen/edit_texts_margin"
        android:text="@string/registration_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorizationButton"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/accent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/authorizationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>