<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        tools:context=".presentation.main.profile.ProfileFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/avatarBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_end_start_margins"
            android:layout_marginBottom="@dimen/common_end_start_margins"
            app:cardCornerRadius="1000dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/avatarTopGuideline">

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/profile_content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/test_image" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/avatarTopGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical"
            android:paddingTop="@dimen/edit_texts_padding"
            android:paddingBottom="@dimen/buttons_margin"
            app:layout_constraintBottom_toTopOf="@+id/saveProfileChangesButton"
            app:layout_constraintTop_toBottomOf="@+id/avatarBackground">

            <TextView
                android:id="@+id/emailTextView"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text" />

            <com.example.moviecatalogproject.presentation.model.MyEditText
                android:id="@+id/emailEditText"
                style="@style/edit_text_style"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:hint="@string/email_text"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/emailErrorTextView"
                style="@style/sign_error_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/loginTextView"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_link_text" />

            <com.example.moviecatalogproject.presentation.model.MyEditText
                android:id="@+id/avatarLinkEditText"
                style="@style/edit_text_style"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:hint="@string/avatar_link_text"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/avatarLinkErrorTextView"
                style="@style/sign_error_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/nameTextView"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text" />


            <com.example.moviecatalogproject.presentation.model.MyEditText
                android:id="@+id/nameEditText"
                style="@style/edit_text_style"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:hint="@string/name_text"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/nameErrorTextView"
                style="@style/sign_error_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dateTextView"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_date_text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/date_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:padding="0dp">

                <com.example.moviecatalogproject.presentation.model.MyEditText
                    android:id="@+id/dateEditText"
                    style="@style/edit_text_style"
                    android:layout_marginBottom="0dp"
                    android:ems="10"
                    android:hint="@string/birth_date_text"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <ImageButton
                    android:id="@+id/dateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="@dimen/edit_texts_padding"
                    android:backgroundTint="@color/transparent"
                    android:contentDescription="@string/date_picker_content_description"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:src="@drawable/ic_baseline_date_range_24"
                    app:layout_constraintBottom_toBottomOf="@+id/dateEditText"
                    app:layout_constraintEnd_toEndOf="@+id/dateEditText"
                    app:layout_constraintTop_toTopOf="@+id/dateEditText"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/dateErrorTextView"
                style="@style/sign_error_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/genderTextView"
                style="@style/profile_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_text" />

            <com.example.moviecatalogproject.presentation.model.GenderPickerCustomView
                android:id="@+id/genderPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_end_start_margins"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="@dimen/common_end_start_margins" />

            <TextView
                android:id="@+id/genderPickerErrorTextView"
                style="@style/sign_error_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <Button
            android:id="@+id/saveProfileChangesButton"
            style="@style/sign_button_style"
            android:layout_marginTop="12dp"
            android:text="@string/save_button_text"
            app:layout_constraintBottom_toTopOf="@+id/logoutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/logoutButton"
            style="@style/text_button_style"
            android:text="@string/logout_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/editTextsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="emailEditText, avatarLinkEditText, nameEditText, dateEditText"
            tools:ignore="NotSibling" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/errorTextViewsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="nameErrorTextView, genderPickerErrorTextView, emailErrorTextView, avatarLinkErrorTextView, dateErrorTextView"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/usernameTextView"
            style="@style/header_first_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="@color/bright_white"

            app:layout_constraintBottom_toBottomOf="@+id/avatarBackground"
            app:layout_constraintStart_toEndOf="@+id/avatarBackground"
            app:layout_constraintTop_toTopOf="@+id/avatarBackground" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>